# mini-ecs

./: CMakeLists.txt  README.md  component_storage.hpp  entity.hpp  test_main.cpp  world.hpp
docs/: 01-why-ecs.md  02-ecs-core-concepts.md  03-data-oriented-design.md  04-modern-cpp-connection.md  05-implementation-roadmap.md
docs/notes/: 01-variadic-templates.md
examples/particle/: components.hpp  main.cpp  types.hpp
examples/particle/systems/: input.hpp  lifetime.hpp  movement.hpp  render.hpp  spawn.hpp  system.hpp
include/mini-ecs/: component_storage.hpp  concepts.hpp  entity.hpp  sparse_set.hpp  world.hpp
